src/main/liberty/aks/openlibertyapplication.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ${project.artifactId}-ingress
  namespace: default
  annotations:
    appgw.ingress.kubernetes.io/cookie-based-affinity: "true"
    appgw.ingress.kubernetes.io/use-private-ip: "false"
spec:
  ingressClassName: azure-application-gateway
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ${project.artifactId}-cluster
                port:
                  number: 9080
